@@ -184,6 +184,7 @@ wxMultiChoiceDialog *   O_WXOBJECT
 wxSingleChoiceDialog *  O_WXOBJECT
 wxMultipleChoiceDialog* O_WXOBJECT
 wxTextEntryDialog *     O_WXOBJECT
+wxPasswordEntryDialog * O_WXOBJECT
 wxFontDialog *          O_WXOBJECT
 wxPageSetupDialog *     O_WXOBJECT
 wxPrintDialog *         O_WXOBJECT
